Added README.md and changed app icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Listview Reorder and Swipe Demo</string>
+    <string name="app_name">Listview Order and Swipe Demo</string>
     <string name="action_settings">Settings</string>
 </resources>
